test/files/neg/macro-incompatible-macro-engine-c.check
macro-incompatible-macro-engine-c.scala:2: error: macro cannot be expanded, because it was compiled by an incompatible macro engine
  MacroLibCompiledByScala210x.foo
  ^
one error found
